--- a/calc.css
+++ b/calc.css
@@ -20,7 +20,7 @@ body{
 .keys{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 9px; 
+    gap: 15px; 
     
 }
 
@@ -29,7 +29,10 @@ button{
     color: white;
     border: none;
     border-radius: 5px;
-    padding:10px;
+    padding:14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+    font-size: 20px;
 }
 
 #display{
@@ -38,7 +41,17 @@ button{
     border: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
-    box-shadow: rgba(42, 40, 40,10);
+    width: 100%;
+    text-align: right;
+    font-weight: 700; 
+    }
+
+.keys button { 
+      cursor: pointer;
  }
 
+
+.equals { 
+        grid-column: 1/-1;
+ }
 
